# fhestate-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: API.md  ARCHITECTURE.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECENTRALIZED-COMPUTE.md  EXAMPLES.md  FAQ.md  FHE_LOGIC.md  QUICKSTART.md  SHIELDED-VAULT-PROGRAM.md
programs/coordinator/: Cargo.toml
programs/coordinator/src/: lib.rs
programs/coordinator/tests/: coordinator_tests.rs
programs/dark_dao/: Cargo.toml
programs/dark_dao/src/: lib.rs
programs/dark_dao/tests/: dao_tests.rs
programs/shielded_vault/: Cargo.toml
programs/shielded_vault/src/: lib.rs
programs/shielded_vault/tests/: vault_tests.rs
src/: cache.rs  constants.rs  errors.rs  keys.rs  lib.rs  logic.rs  math.rs  profiler.rs  state.rs  voting.rs
