[package]
name = "fhestate-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fhe-node"
path = "bin/fhe-node/main.rs"

[[bin]]
name = "fhe-cli"
path = "bin/fhe-cli/main.rs"

[[bin]]
name = "fhe_proof"
path = "src/bin/fhe_proof.rs"

[dependencies]
tfhe = { version = "=0.7.3", features = ["boolean", "shortint", "integer", "x86_64-unix"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.4.0"
solana-sdk = "1.18.26"
solana-client = "1.18.26"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
hex = "0.4"
