[package]
name = "fhestate-rs"
version = "0.2.0"
edition = "2021"
description = "Privacy-preserving computation on Solana using Fully Homomorphic Encryption."
license = "MIT"
repository = "https://github.com/fhestate/fhestate-rs"
homepage = "https://fhestate.org"
keywords = ["fhe", "solana", "encryption", "privacy", "homomorphic"]
categories = ["cryptography", "blockchain"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "fhe-node"
path = "bin/fhe-node/main.rs"

[[bin]]
name = "fhe-cli"
path = "bin/fhe-cli/main.rs"

[[bin]]
name = "fhe_proof"
path = "src/bin/fhe_proof.rs"

[[example]]
name = "counter_demo"
path = "examples/counter_demo.rs"

[[example]]
name = "voting_demo"
path = "examples/voting_demo.rs"

[dependencies]
tfhe = { version = "=0.7.3", features = ["boolean", "shortint", "integer", "x86_64"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.4.0"
solana-sdk = "1.18.26"
solana-client = "1.18.26"
solana-account-decoder = "1.18.26"
solana-transaction-status = "1.18.26"
tokio = { version = "1.36.0", features = ["full"] }
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# log kept for transitive compatibility
log = "0.4"
env_logger = "0.10"
