[package]
name = "shielded_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.30.1"
hex = "0.4"
digest = "=0.10.7"

[workspace]

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.36.0", features = ["full"] }
sha2 = "0.10"
time = "=0.3.36"
